--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body { margin: 0;}
 
 .parent {
     display: grid;
-    grid-template-columns: 15% auto 15%;
+    grid-template-columns: 10% auto 10%;
     grid-template-rows: 150px auto auto 10%;
     font-family: monospace;
     background: radial-gradient(ellipse at bottom, #0c2a38 0%, #0d1943 100%, #043f4f);
@@ -15,12 +15,13 @@ body { margin: 0;}
 }
 
 ul {
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 0px;
 }
 
 .horizontalLis {
-    display: inline-block;
+    color: rgb(214, 163, 21);
+    display: inline;
     margin: 20px 10px 20px 10px;
 }
 
@@ -73,7 +74,7 @@ button {
 /* FULL SITE WIDTH CONTENT SPACE */
 
 .fullWidthContent {
-    grid-column: 1 / 4;
+    grid-column: 2 / 3;
     margin-top: 20px;
     width: 100%;
     background-color: #ebf5ee;
