--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 /* 9-25: Set up a media query that burger-fies the top menu and turns the cards section to have a single column layout */
 
+@media screen and (max-width:12000px){
+
 body {margin: 0;}
 a { text-decoration: none; color: white;}
 
 .parent {
     display: grid;
-    grid-template-columns: 10% auto 10%;
-    grid-template-rows: 150px auto auto auto;
+    grid-template-columns: 15% auto 15%;
+    grid-template-rows: 70px auto auto auto;
     font-family: monospace;
     background: radial-gradient(ellipse at bottom, #0c2a38 0%, #0d1943 100%, #043f4f);
     color: white;
 }
 
 .header{
-    grid-column: 2 / 3;
+    grid-column: 1 / 4;
     font-size: 12px;
     display: flex;
     justify-content: space-around;
@@ -21,8 +23,7 @@ a { text-decoration: none; color: white;}
 }
 
 ul {
-    margin: 20px auto;
-    padding: 0px;
+    letter-spacing: 1.5px;
 }
 
 .horizontalLis {
@@ -41,16 +42,18 @@ ul {
 
 .orangeLinks {
     color: rgb(214, 163, 21);
+    font-weight: bold;
 }
 
 #abbaLogo {
     height: 50px;
-    transform: translateY(25%);
+    transform: translateY(35%);
 }
 
 .tinyLogoTOP {
     height: 18px;
     margin: 0 10px 0 10px;
+    transform: translateY(20%);
 }
 
 .tinyLogoBOTTOM {
@@ -62,7 +65,7 @@ button {
     background-color: #00334d;
     color: white;
     font-family: monospace;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 30px 10px 30px;
     border: 1px solid rgb(214, 163, 21);
     font-size: 12px;
 }
@@ -76,7 +79,7 @@ button {
     display: block;
   }
 
-/* END HEADER START PADDING SPACE */
+/* END HEADER START GUTTER SPACE */
 
 .left-side {
      grid-column: 1 / 2;
@@ -89,8 +92,28 @@ button {
 /* PHOTO SPLASH CONTENT SPACE */
 
 .iframe {
+    width: 100%;
     grid-column: 2 / 3;
-    color: white;
+    color: black;
+    font-size: 56px;
+    font-weight: bold;
+    text-shadow: 3px 3px  rgb(214, 163, 21);
+    margin-top: -30px;
+}
+
+.arrowHolder {
+    display: inline;
+}
+
+#overImageText {
+    transform: translateY(60px) translateX(20px);
+    margin: 0px
+}
+
+#overImageText2 {
+    transform: translateX(-40px);
+    float: right;
+    margin: 0px
 }
 
 #abbaPhoto {
@@ -102,12 +125,15 @@ button {
 .fullWidthContent {
     grid-column: 1 / 4;
     margin-top: 20px;
-    width: 100%;
+    padding-bottom: 50px;
     background-color: #ebf5ee;
     color: black;
     display: grid;
     grid-template-columns: 10% auto 10%;
-    width: 100%;
+}
+
+h4 {
+    font-size: 22px;
 }
 
 .cardContainer {
@@ -117,7 +143,7 @@ button {
 }
 
 .contentCard {
-    margin: 20px 10px 40px 10px;
+    margin: 20px 10px 10px 10px;
     background-color: white;
     border: 1px solid rgb(214, 163, 21);
     padding: 10px;
@@ -128,7 +154,8 @@ button {
 
 .cCImg {
     width: 100%;
-    object-fit: scale-down;
+    height: 300px;
+    object-fit: cover;
 }
 
 .cCText {
@@ -174,9 +201,9 @@ button {
     color: grey;
 }
 
+} /* dont touch this, it's the end of a media query*/
 
-
-@media screen and (max-width:1230px){
+@media screen and (max-width:1200px){
   
     .parent {
         display: grid;
@@ -190,6 +217,16 @@ button {
         background-color: black;
         grid-column: 1 / 4;
 
+    }
+
+    ul {
+        letter-spacing: 1px;
+    }
+
+    .horizontalLis {
+        color: white;
+        display: inline;
+        margin: 20px 5px 20px 5px;
     }
 
     #abbaLogo {
@@ -212,7 +249,7 @@ button {
 
 }
 
-@media screen and (max-width:930px){
+@media screen and (max-width:920px){
   
     .parent {
         display: grid;
@@ -249,11 +286,19 @@ button {
         grid-template-columns: auto;
     }
 
+    .cCImg {
+        width: 100%;
+        height: 50vh;
+        object-fit: cover;
+    }
+
     /* Third part of the webpage */
 
     .footer {
         letter-spacing: 1px;
+        text-align: center;
     }
+
 
     .hideSMWord {
         display: none;
@@ -266,6 +311,7 @@ button {
     .tinyLogoBOTTOM {
         height: 40px;
         margin: 0 10px 0 10px;
+        opacity: 60%;
     }
 
 }
