--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
 
 @media screen and (max-width:12000px){
 
+/* de-defaulting section */
+
 body {margin: 0;}
-a { text-decoration: none; color: white;}
+a { text-decoration: none; color: white;} a:hover { color: rgb(214, 163, 21)}
+
+/* end de-defaulting section */
 
 .parent {
     display: grid;
@@ -27,7 +31,6 @@ ul {
 }
 
 .horizontalLis {
-    color: white;
     display: inline;
     margin: 20px 10px 20px 10px;
 }
@@ -47,7 +50,7 @@ ul {
 .orangeLinks {
     color: rgb(214, 163, 21);
     font-weight: bold;
-}
+} .orangeLinks:hover { color: white; }
 
 #abbaLogo {
     height: 50px;
@@ -72,7 +75,7 @@ button {
     padding: 10px 30px 10px 30px;
     border: 1px solid rgb(214, 163, 21);
     font-size: 12px;
-}
+} button:hover { background-color: rgb(214, 163, 21); color: black; }
 
 .burger div{
     width: 25px;
@@ -139,10 +142,9 @@ button {
 
 #featuredText {
     grid-column: 2 /3;
-    margin: 20px 10px 10px 10px;
+    margin: 20px 10px 10px 20px;
     color: grey;
 }
-
 
 .cardContainer {
     grid-column: 2 / 3;
@@ -159,7 +161,7 @@ button {
     letter-spacing: -1px;
     text-align: left;
     font-size: 14px;
-}
+} .contentCard:hover { background-color: #eeeeee; box-shadow: 4px 4px #dddddd;}
 
 .contentBanner {
     grid-column: 1 /4;
@@ -172,6 +174,8 @@ button {
 h4 {
     font-size: 22px;
 }
+
+h5:hover { letter-spacing: 2px;}
 
 .cCImg {
     width: 100%;
@@ -257,6 +261,12 @@ h4 {
         transform: translateY(25%);
     }
 
+    #featuredText {
+        grid-column: 1 / 4;
+        margin: 20px 10px 10px 20px;
+        color: grey;
+    }
+
     .cardContainer {
         grid-column: 1 / 4;
         display: grid;
@@ -308,7 +318,13 @@ h4 {
         display: block
     }
 
+    #featuredText {
+        grid-column: 1 / 4;
+        margin: 20px 10px 10px 70px;
+    }
+
     .contentCard {
+        height: 600px;
         margin: 20px 60px 10px 60px;
     }
 
@@ -325,7 +341,6 @@ h4 {
         text-align: center;
     }
 
-
     .hideSMWord {
         display: none;
     }
@@ -338,6 +353,6 @@ h4 {
         height: 40px;
         margin: 0 10px 0 10px;
         opacity: 60%;
-    }
+    } .tinyLogoBOTTOM:hover { opacity: 100%;}
 
 }
