--- a/style.css
+++ b/style.css
@@ -165,8 +165,25 @@ button {
     transition: 500ms;
 } .contentCard:hover { background-color: #eeeeee; box-shadow: 4px 4px #dddddd;}
 
-.contentBanner {
-    grid-column: 1 /4;
+.contentCardMonochrome {
+    margin: 20px 10px 10px 10px;
+    background-color: #eeeeee;
+    padding: 10px;
+    color: rgb(65, 65, 65);
+    text-align: center;
+    font-size: 14px;
+}
+
+.contentBanner1 {
+    grid-column: 2 / 4;
+    height: 400px;
+    background-color: white;
+    margin: 20px 10px 10px 10px;
+    padding: 10px;
+}
+
+.contentBanner2 {
+    grid-column: 1 / 3;
     height: 400px;
     background-color: white;
     margin: 20px 10px 10px 10px;
